--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 ChemoTracker.xcworkspace/xcuserdata/jesshanta.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 .DS_Store
 ChemoTracker/.DS_Store
+ChemoTracker/Base.lproj/.DS_Store
